--- a/toscatranslator/providers/amazon/provider.cfg
+++ b/toscatranslator/providers/amazon/provider.cfg
@@ -4,7 +4,9 @@ tosca_elements_definition_file = TOSCA_amazon_definition_1_0.yaml
 
 [ansible]
 module_prefix = ec2_
-module_description = Create element
+module_description_create = Create Amazon aws component
+module_description_delete = Delete Amazon aws component
+modules_skipping_delete = ''
 
 [ansible.node_filter]
 node_filter_source_prefix = ec2_
