Fully fix scalable with software components, fix deleting fips

--- a/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
+++ b/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
@@ -180,14 +180,10 @@ node_types:
       public_key:
         type: string
         required: false
+    artifacts:
       public_key_file:
-        type: string
+        type: openstack.artifacts.File
         required: false
-    # need to change it later, when artifact support will be added
-    # artifacts:
-      # public_key_file:
-        # type: openstack.artifacts.File
-        # required: false
 
   openstack.nodes.Network: # os_network, os_networks_facts
     derived_from: openstack.nodes.Root
