--- a/toscatranslator/configuration_tools/ansible/artifacts/add_host.yaml
+++ b/toscatranslator/configuration_tools/ansible/artifacts/add_host.yaml
@@ -9,16 +9,18 @@
     line: '[{{ group }}]'
 - lineinfile:
     path: '{{ playbook_dir }}/hosts.ini'
-    line: '{{ group }} ansible_host={{ host_ip }} ansible_user={{ ansible_user }} ansible_pass={{ ansible_sudo_pass }}'
-  when: ansible_sudo_pass is defined and host_ip is defined and host_ip != ''
+    line: '{{ item[0] }} ansible_host={{ item[1] }} ansible_user={{ ansible_user }} ansible_pass={{ ansible_sudo_pass }}'
+  when: ansible_sudo_pass is defined and host_ip is defined and item[1] != ''
+  with_list: "{{ host_ip }}"
 - lineinfile:
     path: '{{ playbook_dir }}/hosts.ini'
-    line: '{{ group }} ansible_host={{ host_ip }} ansible_user={{ ansible_user }}'
-  when: ansible_sudo_pass is undefined and host_ip is defined and host_ip != ''
+    line: '{{ item[0] }} ansible_host={{ item[1] }} ansible_user={{ ansible_user }}'
+  when: ansible_sudo_pass is undefined and host_ip is defined and item[1] != ''
+  with_list: "{{ host_ip }}"
 - shell: |
     check_ssh() {
         while [ 1 = 1 ]; do
-                ssh-keyscan {{ host_ip }},`dig +short {{ host_ip }}`
+                ssh-keyscan {{ item[1] }},`dig +short {{ item[1] }}`
                 rc=$?
                 case $rc in
                     0)        return $rc;;
@@ -28,13 +30,18 @@
             done
     }
     check_ssh
-  when: host_ip is defined and host_ip != ''
-- shell: ssh-keyscan {{ host_ip }},`dig +short {{ host_ip }}`
+  when: host_ip is defined and item[1] != ''
+  with_list: "{{ host_ip }}"
+- shell: ssh-keyscan {{ item[1] }},`dig +short {{ item[1] }}`
   register: host_key
   ignore_errors: true
-  when: host_ip is defined and host_ip != ''
+  when: host_ip is defined and item[1] != ''
+  with_list: "{{ host_ip }}"
+- debug:
+    msg: "{{ host_key }}"
 - known_hosts:
     path: ~/.ssh/known_hosts
-    name: '{{ host_ip }}'
-    key: '{{ host_key.stdout }}'
-  when: host_key is defined and host_ip is defined and host_ip != '' and host_key.rc == 0
+    name: '{{ item.item[1] }}'
+    key: '{{ item.stdout }}'
+  when: host_key is defined and host_ip is defined and item.item[1] != '' and item.rc == 0
+  with_items: "{{ host_key.results }}"
