--- a/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
+++ b/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
@@ -154,17 +154,44 @@ tosca.nodes.Compute:
       networks.*.addresses:
         - parameter: "{self[buffer][address]}"
           value: "{self[value]}"
-        - parameter: openstack.nodes.Server.requirements.nics.node_filter.properties
+        - parameter: openstack.nodes.Server.requirements.network.node_filter.properties
           value:
             - parameter: id
-              value: network_id
-              facts: os_subnets_facts.ansible_facts.openstack_subnets
-              executor: ansible
-              condition: ip_contains
-              arguments:
-                - allocation_pool_start
-                - allocation_pool_end
-                - "{self[buffer][address]}" # please don't use self[value] in arguments
+              value:
+                value: network_id
+                condition: ip_contains
+                facts:
+                  - source: os_subnets_facts
+                    executor: ansible
+                    value: target_objects
+                    parameters: {}
+                  - source: set_fact
+                    executor: ansible
+                    parameters:
+                      target_objects: "\\{\\{ target_objects['ansible_facts']['openstack_subnets'] \\}\\}"
+                    value: temp_value
+                  - source: set_fact
+                    executor: ansible
+                    parameters:
+                      new_target_objects: "\\{\\{ [] \\}\\}"
+                    value: tmp_value
+                  - source: set_fact
+                    parameters:
+                      new_target_objects: "\\{\\{ new_target_objects + [item | combine(\\{ 'allocation_pool_start': item['allocation_pools'][0]['start'] | default([]), 'allocation_pool_end': item['allocation_pools'][0]['end'] | default([]) \\})] \\}\\}"
+                    extra:
+                      with_items: "\\{\\{ target_objects \\}\\}"
+                    value: temp_value
+                    executor: ansible
+                  - source: set_fact
+                    parameters:
+                      target_objects: "\\{\\{ new_target_objects \\}\\}"
+                    value: temp_value
+                    executor: ansible
+                executor: ansible
+                arguments:
+                  - allocation_pool_start
+                  - allocation_pool_end
+                  - "{self[buffer][address]}" # please don't use self[value] in arguments
       ports.*.port_name:
         parameter: openstack.nodes.Server.properties.nics
         value:
@@ -178,25 +205,59 @@ tosca.nodes.Compute:
         value:
           - net-id: "{self[value]}"
       ports.*.mac_address:
-        parameter: openstack.nodes.Server.requirements.nics.node_filter.properties
-        value:
-          - parameter: mac_address
-            value: "{self[value]}"
+        - parameter: "{self[buffer][mac_address]}"
+          value: "{self[value]}"
+        - parameter: openstack.nodes.Server.properties.nics
+          value:
+            - port-id: # bug: nics:port-id instead of nics:[port-id] when other params in nics not specified
+                value: id
+                facts: os_port_facts.ansible_facts.openstack_ports
+                executor: ansible
+                condition: equals
+                arguments:
+                  - mac_address
+                  - "{self[buffer][mac_address]}"
       ports.*.addresses:
         - parameter: "{self[buffer][address]}"
           value: "{self[value]}"
-        - parameter: openstack.nodes.Server.requirements.nics.node_filter.properties
+        - parameter: openstack.nodes.Server.requirements.network.node_filter.properties
           value:
             - parameter: id
               value:
                 value: network_id
-                facts: os_subnets_facts.ansible_facts.openstack_subnets
-                executor: ansible
                 condition: ip_contains
+                facts:
+                  - source: os_subnets_facts
+                    executor: ansible
+                    value: target_objects
+                    parameters: {}
+                  - source: set_fact
+                    executor: ansible
+                    parameters:
+                      target_objects: "\\{\\{ target_objects['ansible_facts']['openstack_subnets'] \\}\\}"
+                    value: temp_value
+                  - source: set_fact
+                    executor: ansible
+                    parameters:
+                      new_target_objects: "\\{\\{ [] \\}\\}"
+                    value: tmp_value
+                  - source: set_fact
+                    parameters:
+                      new_target_objects: "\\{\\{ new_target_objects + [item | combine(\\{ 'allocation_pool_start': item['allocation_pools'][0]['start'] | default([]), 'allocation_pool_end': item['allocation_pools'][0]['end'] | default([]) \\})] \\}\\}"
+                    extra:
+                      with_items: "\\{\\{ target_objects \\}\\}"
+                    value: temp_value
+                    executor: ansible
+                  - source: set_fact
+                    parameters:
+                      target_objects: "\\{\\{ new_target_objects \\}\\}"
+                    value: temp_value
+                    executor: ansible
+                executor: ansible
                 arguments:
                   - allocation_pool_start
                   - allocation_pool_end
-                  - "{self[buffer][address]}"
+                  - "{self[buffer][address]}" # please don't use self[value] in arguments
     capabilities:
       host.properties.num_cpus:
         parameter: openstack.nodes.Server.requirements.flavor.node_filter.properties
@@ -232,7 +293,7 @@ tosca.nodes.Compute:
               value: default_tmp
       endpoint:
         - parameter: "{self[extra][ansible][{self[keyname]}_security_group_rule][with_sequence]}"
-          value: "start=0 end=\\{\\{ [protocol | length, port | length] | max - 1 \\}\\} format=%d"
+          value: "start=0 end=\\{\\{ [protocol | length, port | length, initiator | length] | max - 1 \\}\\} format=%d"
         - parameter: openstack.nodes.SecurityGroup.properties.name
           value: "{self[name]}_security_group"
         - parameter: openstack.nodes.Server.requirements.security_groups
@@ -255,6 +316,8 @@ tosca.nodes.Compute:
                 value: "\\{\\{ port[item | int] | default(omit) \\}\\}"
               - parameter: openstack.nodes.SecurityGroupRule.properties.port_range_max
                 value: "\\{\\{ port[item | int] | default(omit) \\}\\}"
+              - parameter: openstack.nodes.SecurityGroupRule.properties.direction
+                value: "\\{\\{ initiator[item | int] | default(omit) \\}\\}"
             port:
               - parameter: "{self[extra][ansible][{self[keyname]}_security_group_rule][vars][port]}"
                 value:
@@ -272,14 +335,16 @@ tosca.nodes.Compute:
               error: true
               reason: Not supported by OpenStack
             initiator.target:
-              parameter: openstack.nodes.SecurityGroupRule.properties.direction
-              value: ingress
+              - parameter: "{self[extra][ansible][{self[keyname]}_security_group_rule][vars][initiator]}"
+                value:
+                  - ingress
             initiator.source:
-              parameter: openstack.nodes.SecurityGroupRule.properties.direction
-              value: egress
+              - parameter: "{self[extra][ansible][{self[keyname]}_security_group_rule][vars][initiator]}"
+                value:
+                  - egress
             initiator.peer:
-              parameter: openstack.nodes.SecurityGroupRule.properties.direction
-              value: peer
+              error: true
+              reason: Not supported by OpenStack
             ports.*.protocol:
               - parameter: "{self[extra][ansible][{self[keyname]}_security_group_rule][vars][protocol]}"
                 value:
@@ -288,10 +353,16 @@ tosca.nodes.Compute:
               - parameter: "{self[extra][ansible][{self[keyname]}_security_group_rule][vars][port]}"
                 value:
                   - "{self[value]}"
+              - parameter: "{self[extra][ansible][{self[keyname]}_security_group_rule][vars][initiator]}"
+                value:
+                  - egress
             ports.*.target:
               - parameter: "{self[extra][ansible][{self[keyname]}_security_group_rule][vars][port]}"
                 value:
                   - "{self[value]}"
+              - parameter: "{self[extra][ansible][{self[keyname]}_security_group_rule][vars][initiator]}"
+                value:
+                  - ingress
       os:
         - properties:
             architecture: "{self[buffer][os][architecture]}"
